--- a/quiet-night.css
+++ b/quiet-night.css
@@ -1,21 +1,6 @@
 /*
-	@theme Quiet Night
-	@override-placeholders html, css, sourcecode.php
-*/
-
-/* 
-constant #D8FA3C
-entity #DE5A00
-keyword #FBDE2D
-storage #FBDE2D
-string #61CE3C
-support #8DA6CE
-var color #F8F8F8 bg #17481A
-invalid bg #AB2A1D color #F8F8F8
-superclass #FF6400
-meta.function-call.py #BECDE6
-meta.tag #7F90AA
-entity.name.section #FFFFFF 
+	@theme QuietNight
+	@override-placeholders html, xml, css, php, sourcecode.js, ee
 */
 
 
@@ -47,14 +32,24 @@ tag.doctype > *,
 tag.doctype > string.quoted 
 { color: #557; }
 
-string double, string single{ 
-color:#8af299;
+literal.string,
+string single, /*Legacy*/
+string double /*Legacy*/
+{ 
+	color:#61CE3C;
+}
+
+square-brace
+{
+	color:rgba(220,220,255,0.9);
 }
 
 processing-instruction { color:#aeaeae; }
 
 /* 
+-----------------------------------------------------
 	ExpressionEngine Tags
+-----------------------------------------------------
 */
 
 /*ee.tag {background:rgba(90,54,133,0.1);} */
@@ -78,12 +73,17 @@ ee.tag.self-closing > punctuation,
 ee.tag.self-closing ee.attribute-name { color:#9ecffd;}
 
 /* 
+-----------------------------------------------------
 	HTML
+-----------------------------------------------------
 */
+
 html {spell-check:enabled;}
 
 /* 
+-----------------------------------------------------
 	CSS
+-----------------------------------------------------
 */
 
 css selector.css 							{ color:#DE5A00; }
@@ -128,29 +128,84 @@ css identifier.variable.value {
 }
 css zkeyword.other.italic 	{ font-style:italic; }
 css zkeyword.other.bold		{ font-weight:bold; }
+
 /* 
+-----------------------------------------------------
 	PHP
+-----------------------------------------------------
 */
-php { color:rgba(220,220,255,0.9);}
-function {color:#DE5A00;}
-meta.include.php {background-color:#0C1021;}
-variable.other, variable > punctuation.variable {color:#d144ca;
-	background-color:#212537;
-	font-weight:bold; ;}
-include {background-color:#0C1021;}
-keyword.control.import.include {background-color:#0C1021;}
-keyword.control{ color:#9ecffd;}
 
-constant.numeric { color:#8af299; }
-punctuation.section.embedded { color:#f93232;}
-meta.function-call {color:#9ecffd; font-weight:bold;}
+php,
+operator
+{ 
+	color:rgba(220,220,255,0.9);
+}
+
+php delimiter.embedded.source,
+php.definition
+{
+	color: #FF0000;
+}
+
+/* Functions */
+php identifier.function
+{
+	color:#9ef29f;
+}
+php identifier.function.support > begin
+{
+	color:#DE5A00;
+}
+
+/* Variables */
+php variable,
+php identifier.variable.instance.class
+php variable > group,
+variable.other,  /* Legacy */
+variable > punctuation.variable /* Legacy*/ 
+{
+	color:#d144ca;
+	font-weight:bold;
+}
+
+/* Keywords */
+php keyword.control.include,
+php keyword.control,
+php modifier
+{ 
+	color:#9ecffd;
+	background-color:#0C1021;
+}
+
+/* Constants */
+keyword.constant 
+{ 
+	color:#78e0ff; 
+}
+
+/* PHP Doc */
+php phpDoc.keyword 
+{
+	color:rgba(163,204,253,0.63);
+}
+
+php name 
+{ 
+	color:#9ef29f;
+}
+
+php method.name
+{ color:#3df5ff;}
+
+
+
 
 
 /* 
+-----------------------------------------------------
 	JS
+-----------------------------------------------------
 */
-
-
 invalid {
 	background-color: #f93232;
 }
